--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </style>
 </head>
 <body>
-    <img src="main/LOGOUSACH.png" alt="Logo de la Universidad" class="logo">
+    <img src="LOGOUSACH.png" alt="Logo de la Universidad" class="logo">
     
     <div class="container">
         <div class="left-column">
